<resources>
    <string name="app_name">Whours</string>
    <string name="acitivity_name_project_list">项目列表</string>
    <string name="acitivity_name_item_list">历史进度</string>
    <string name="acitivity_name_item">学习详情</string>
    <string name="acitivity_name_project">项目详情</string>


    <string name="start_page">欢迎来到万小时计划</string>
    <string name="start_page_btn">我们开始吧</string>
    <string name="action_settings">Settings</string>
    <string name="newproject">新建工程</string>

    <string name="project_title">工程名称</string>
    <string name="project_titlehint">请输入工程名称</string>
    <string name="project_detail">工程详情：</string>
    <string name="project_detailhint">请输入工程详情</string>

    <string name="contextmenu_project_delete">删除该工程</string>
    <string name="contextmenu_project_change">修改该工程</string>
    <string name="contextmenu_project_cancel">取消进行状态</string>
    <string name="contextmenu_project_showitemlist">显示历史记录</string>

    <string name="item_starttime">开始时间：</string>
    <string name="item_endtime">结束时间：</string>
    <string name="item_costtime">消耗时间：</string>
    <string name="item_detail">笔记</string>
    <string name="item_timetype">分钟</string>
    <string name="item_detailhint">请输入学习心得或者笔记</string>

    <string name="err_exceedmaxcosttime">输入的时间已经超过了最长时间，你确定吗？</string>
    <string name="err_sdcardnotexist">SD卡不存在，请插入SD卡！</string>
    <string name="mediabutton_invaild">无法录音</string>
    <string name="mediabutton_record">开始录音</string>
    <string name="mediabutton_recording">正在录音</string>
    <string name="mediabutton_recordend">完成录音</string>
    <string name="mediabutton_playing">正在播放</string>
    <string name="mediabutton_default">状态异常</string>
    <string name="mediabutton_dialog_delete_title">删除音频</string>
    <string name="mediabutton_dialog_delete_text">你确定删除已经录制好的音频吗?</string>
    <string name="mediabutton_dialog_btn_yes">我心已决</string>
    <string name="mediabutton_dialog_btn_no">再考虑下</string>

</resources>
